--- a/about/our-team.html
+++ b/about/our-team.html
@@ -52,7 +52,7 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="../index.html">
-                    <img src="../img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
+                    <img src="../img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 150px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
@@ -143,23 +143,39 @@
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-1">Dr. Agyenim Amoako</h5>
-                            <span>Co-Founder / MD</span><br>
+                            <span>Co-Founder / MD, FAAFP</span><br>
                         </div>
                         <div class="text-center p-4">
                             <details>
                                 <summary class="btn btn-primary mb-3">Read Profile</summary>
                                 <p>
-                                    Dr. Amoako is a highly skilled physician with a background in Biology and Chemistry from
-                                    Delaware State University and a medical degree from Ross University School of Medicine, who
-                                    brings over a decade of hands-on experience in primary and occupational healthcare. Completing
-                                    his Family Medicine Residency at the University of Arkansas for Medical Sciences, Dr. Amoako
-                                    has dedicated the past 10 years to serving as a primary care and occupational medicine provider
-                                    at Mountaire Health and Wellness Center, a facility owned by Mountaire Delmarva Chicken
-                                    Farms. In this role, he has provided critical healthcare services to employees and their families,
-                                    addressing both preventive and acute medical needs, reducing workplace health risks, and
-                                    improving overall employee well-being. His extensive experience in family medicine, coupled
-                                    with his deep understanding of occupational health, ensures a strong foundation for delivering
-                                    high-quality, community-centered medical care.
+                                   Dr. Amoako, a highly skilled physician, possesses a background in Biology and Chemistry from 
+                                   Delaware State University and a medical degree from Ross University School of Medicine. With 
+                                   over a decade of practical experience in primary and occupational healthcare, Dr. Amoako 
+                                   completed his Family Medicine Residency at the University of Arkansas for Medical Sciences. 
+                                   Subsequently, he has dedicated the past decade to serving as a primary care and occupational 
+                                   medicine provider at Mountaire Health and Wellness Center, a facility owned by Mountaire Delmarva 
+                                   Chicken Farms
+                                </p>
+                                <p>
+                                    In this capacity, Dr. Amoako provides critical healthcare services to employees and their families, 
+                                    addressing both preventive and acute medical requirements, mitigating workplace health hazards and 
+                                    enhancing overall employee well-being. His extensive expertise in family medicine, coupled with 
+                                    his profound understanding of occupational health, establishes a robust foundation for delivering 
+                                    high-quality, community-oriented medical care.
+                                </p>
+                                <p>
+                                    In addition to his professional commitments, Dr. Amoako pursues various hobbies and activities. 
+                                    He enjoys reading, playing soccer, running, participating in church activities, working with 
+                                    individuals experiencing homelessness, taking his children to sporting events and spending 
+                                    quality time with his family. These pursuits provide a balance to his demanding career and 
+                                    inspire his unwavering dedication to improving community health.
+                                </p>
+                                <p>
+                                    “Perseverance conquers all” has been Dr. Amoako's guiding principle throughout his life. 
+                                    His spiritual background further reinforces this belief, as exemplified by Philippians 4:13, 
+                                    which states, “I can do all things through Christ who strengthens me” has also been his guide 
+                                    even in difficult or impoverished circumstances.
                                 </p>
                             </details>
                         
@@ -173,20 +189,45 @@
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-1">Patience Agbeviadey</h5>
-                            <span>Co-Founder / Clinical Social Worker</span><br>
+                            <span>Co-Founder / Licensed Clinical Social Worker</span><br>
                         </div>
                         <div class="text-center p-4">
                             <details>
                                 <summary class="btn btn-primary mb-3">Read Profile</summary>
                                 <p>
-                                    Patience Agbeviadey, a Licensed Clinical Social Worker (LCSW) with over 15 years of
-                                    experience in substance use treatment and mental health, complements Dr. Amoako's medical
-                                    expertise with a strong behavioral health focus. Holding a degree in Psychology and a Master's
-                                    in Social Work from Delaware State University, she has worked extensively with individuals
-                                    struggling with addiction, mental health challenges, and social determinants of health. Her
-                                    expertise in developing and implementing effective mental health interventions will be
-                                    instrumental in providing comprehensive care to our clients, ensuring that their emotional and
-                                    psychological needs are met alongside their physical health requirements.
+                                    Patience Agbeviadey, a licensed clinical social worker, holds undergraduate degrees 
+                                    in psychology and a master's in social work from Delaware State University.
+                                </p>
+                                <p>
+                                    With over 15 years of experience, Patience has worked in various settings, including 
+                                    group homes for individuals experiencing homelessness, substance use and severe persistent 
+                                    mental health conditions. She has also worked with clients struggling with depression, anxiety 
+                                    and pregnant women grappling with substance abuse.
+                                </p>
+                                <p>
+                                    In her role as a care coordinator for Amerihealth, Patience connected members with essential 
+                                    services and assisted them in scheduling appointments. She also provided support and community 
+                                    resources to help them navigate the healthcare system. During this time, Patience observed 
+                                    the urgent need for the services that her husband, Dr. Amoako, and she are planning to offer. 
+                                    As she helped members with their appointments, she noticed that many providers' offices were 
+                                    booked, unable to accept patients or had wait times ranging from one to six months. This 
+                                    realization, coupled with their desire to serve their community, prompted Patience and Dr. Amoako 
+                                    to make the decision to establish Firm Foundation Health and Wellness Center.
+                                </p>
+                                <p>
+                                    At the core of their clinic lies the belief in creating a partnership with their patients in a holistic setting. 
+                                    This approach aims to move away from the traditional sick care model and foster an environment that supports, 
+                                    encourages and empowers patients to take proactive steps towards improving their overall well-being.
+                                </p>
+                                <p>
+                                    As a clinician, wife and mother of four wonderful children. Patience in her free time, 
+                                    cherishes spending time with her family, engaging in activities like grilling, shopping, walking 
+                                    in nature or on the beach, listening to music, cooking and reading. She finds solace and guidance 
+                                    in her faith in God, which has been a constant companion throughout her life's journey.
+                                </p>
+                                <p>
+                                    One of her favorite books of the Bible is Psalms, and Psalm 23 is a chapter she finds particularly comforting and 
+                                    uses as a source of guidance in challenging situations.
                                 </p>
                             </details>
                         </div>
@@ -225,35 +266,12 @@
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
                     <p class="text-uppercase mb-0">Monday - Friday</p>
-                    <p>09:00 am - 07:00 pm</p>
+                    <p>08:00 am - 05:00 pm</p>
                     <p class="text-uppercase mb-0">Saturday</p>
-                    <p>09:00 am - 12:00 pm</p>
+                    <p>By Appointment</p>
                     <p class="text-uppercase mb-0">Sunday</p>
                     <p>Closed</p>
                 </div>
-                <!-- <div class="col-lg-3 col-md-6">
-                    <h5 class="text-uppercase text-light mb-4">Certs</h5>
-                    <div class="row g-1">
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-1.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-2.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-3.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-4.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-5.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid" src="img/service-6.jpg" alt="">
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
