--- a/index.html
+++ b/index.html
@@ -372,7 +372,11 @@
                         </div>
                         <div class="ms-3">
                             <h6 class="text-white text-uppercase">Office Time</h6>
-                            <span class="text-white">Mon-Sat 09am-5pm, Sun Closed</span>
+                            <span class="text-white">
+                                Mon-Fri: 08am-5pm, 
+                                <br> Sat: By Appointment
+                                <br> Sun: Closed
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -448,9 +452,9 @@
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
                     <p class="text-uppercase mb-0">Monday - Friday</p>
-                    <p>09:00 am - 07:00 pm</p>
+                    <p>08:00 am - 05:00 pm</p>
                     <p class="text-uppercase mb-0">Saturday</p>
-                    <p>09:00 am - 12:00 pm</p>
+                    <p>By Appointment</p>
                     <p class="text-uppercase mb-0">Sunday</p>
                     <p>Closed</p>
                 </div>
