--- a/our-contact.html
+++ b/our-contact.html
@@ -51,7 +51,7 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="index.html">
-                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
+                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 150px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
@@ -254,9 +254,9 @@
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Business Hours</h5>
                     <p class="text-uppercase mb-0">Monday - Friday</p>
-                    <p>09:00 am - 07:00 pm</p>
+                    <p>08:00 am - 05:00 pm</p>
                     <p class="text-uppercase mb-0">Saturday</p>
-                    <p>09:00 am - 12:00 pm</p>
+                    <p>By Appointment</p>
                     <p class="text-uppercase mb-0">Sunday</p>
                     <p>Closed</p>
                 </div>
